--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coin_size",
   "version": "1.0.0",
-  "description": "檢查 coin szie 的 denom 是否在範圍內",
+  "description": "檢查 coin size 的 denom 是否在範圍內",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
